# BIPPlayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/libs/include/: bipPlayer.h  native-lib.h
app/src/androidTest/java/com/github/welcomeworld/bipplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/github/welcomeworld/bipplayer/: BIPApp.java  BIPPlayer.java  DefaultBIPPlayer.java  MainActivity.java
app/src/main/java/com/github/welcomeworld/bipplayer/sample/: BIPApp.java  CameraActivity.java  MainActivity.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/github/welcomeworld/bipplayer/: ExampleUnitTest.java
bipplayer/: build.gradle  consumer-rules.pro
bipplayer/libs/include/: BipAudioTracker.h  BipClock.h  BipFrameQueue.h  BipLog.h  BipMessage.h  BipNativeWindow.h  BipPacketQueue.h  BipPublisher.h  BipTrackerCallback.h  BipVideoTracker.h  MediaTracker.h  bipPlayer.h  bipPlayerOptions.h  fdAVIOContext.h  native-lib.h
bipplayer/libs/include/soundtouch/: FIFOSamplePipe.h  STTypes.h
bipplayer/src/androidTest/java/com/github/welcomeworld/bipplayer/: ExampleInstrumentedTest.java
bipplayer/src/main/: AndroidManifest.xml
bipplayer/src/main/cpp/: BipAudioTracker.cpp  BipFrameQueue.cpp  BipMessage.cpp  BipNativeWindow.cpp  BipPacketQueue.cpp  BipPublisher.cpp  BipVideoTracker.cpp  CMakeLists.txt  MediaTracker.cpp  bipPlayer.cpp  fdAVIOContext.cpp  native-lib.cpp
bipplayer/src/main/java/com/github/welcomeworld/bipplayer/: BIPPlayer.java  BipDataSource.java  DefaultBIPPlayer.java  DefaultBipPublisher.java
gradle/wrapper/: gradle-wrapper.properties
